<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/create_login"
        android:textColor="#0231BC"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shappe"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shappe"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shappe"
                android:hint="@string/confirm_password" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#0333DD"
        android:padding="15dp"
        android:text="@string/sing_in"
        app:cornerRadius="12dp" />

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="vertical">-->

    <!--        <TextView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:gravity="center"-->
    <!--            android:layout_marginTop="50dp"-->
    <!--            android:text="@string/or_sign_in_with" />-->

    <!--&lt;!&ndash;        <LinearLayout&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:gravity="center"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:orientation="horizontal">&ndash;&gt;-->

    <!--&lt;!&ndash;            <androidx.cardview.widget.CardView&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/btnGoogle"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="120dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="70dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:cardCornerRadius="8dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:cardElevation="10dp">&ndash;&gt;-->

    <!--&lt;!&ndash;                <ImageView&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_width="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_height="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_gravity="center"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:src="@drawable/img"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:contentDescription="@string/todo" />&ndash;&gt;-->
    <!--&lt;!&ndash;            </androidx.cardview.widget.CardView>&ndash;&gt;-->

    <!--&lt;!&ndash;            <androidx.cardview.widget.CardView&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/btnPhone"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="120dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="70dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_margin="12dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:cardCornerRadius="8dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:cardElevation="10dp">&ndash;&gt;-->

    <!--&lt;!&ndash;                <ImageView&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_width="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_height="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_gravity="center"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:src="@drawable/img_1"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:contentDescription="@string/number" />&ndash;&gt;-->
    <!--&lt;!&ndash;            </androidx.cardview.widget.CardView>&ndash;&gt;-->

    <!--&lt;!&ndash;            <androidx.cardview.widget.CardView&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/btnSms"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="120dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="70dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:cardCornerRadius="8dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:cardElevation="10dp">&ndash;&gt;-->

    <!--&lt;!&ndash;                <ImageView&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_width="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_height="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_gravity="center"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:src="@drawable/img_2"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:contentDescription="@string/black" />&ndash;&gt;-->

    <!--&lt;!&ndash;            </androidx.cardview.widget.CardView>&ndash;&gt;-->

    <!--&lt;!&ndash;        </LinearLayout>&ndash;&gt;-->

    <!--    </LinearLayout>-->

</LinearLayout>